--- a/sfml template/sfml template.vcxproj.filters
+++ b/sfml template/sfml template.vcxproj.filters
@@ -23,6 +23,24 @@
     <Filter Include="TechnologiesV">
       <UniqueIdentifier>{1457c6a6-802e-4240-958d-0de8cc48064f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Units">
+      <UniqueIdentifier>{e868262c-a863-48e1-a0d1-f5cb390abf89}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Units\Childs">
+      <UniqueIdentifier>{0b84d046-fa1b-43a6-9da1-fa17827a733d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Units\Parent Unit">
+      <UniqueIdentifier>{d0c4990a-a536-43b8-8b7e-1d59740fd51b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="TechnologiesV\Parent">
+      <UniqueIdentifier>{8ea8d13c-bca8-451d-94b4-e928dbfadac6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="TechnologiesV\ChildCPP">
+      <UniqueIdentifier>{77fd46ed-2c8a-40d4-b7d4-64fe437fa2f3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="TechnologiesV\ChildHeaders">
+      <UniqueIdentifier>{f1ec2701-535d-49e7-9d18-5a32a56f50c1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -70,50 +88,56 @@
     <ClCompile Include="Map.cpp">
       <Filter>Kastet</Filter>
     </ClCompile>
-    <ClCompile Include="MapMaking.cpp">
-      <Filter>TechnologiesV</Filter>
-    </ClCompile>
-    <ClCompile Include="Masonry.cpp">
-      <Filter>TechnologiesV</Filter>
-    </ClCompile>
-    <ClCompile Include="Mathematics.cpp">
-      <Filter>TechnologiesV</Filter>
-    </ClCompile>
-    <ClCompile Include="Monarchy.cpp">
-      <Filter>TechnologiesV</Filter>
-    </ClCompile>
-    <ClCompile Include="Mysticism.cpp">
-      <Filter>TechnologiesV</Filter>
-    </ClCompile>
-    <ClCompile Include="Technologies.cpp">
-      <Filter>TechnologiesV</Filter>
-    </ClCompile>
-    <ClCompile Include="Trade.cpp">
-      <Filter>TechnologiesV</Filter>
-    </ClCompile>
-    <ClCompile Include="Writing.cpp">
-      <Filter>TechnologiesV</Filter>
-    </ClCompile>
-    <ClCompile Include="СodeOfLaws.cpp">
-      <Filter>TechnologiesV</Filter>
-    </ClCompile>
     <ClCompile Include="Alphabet.cpp">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildCPP</Filter>
     </ClCompile>
     <ClCompile Include="BronzeWorking.cpp">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildCPP</Filter>
     </ClCompile>
     <ClCompile Include="Ceremonial_Burial.cpp">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildCPP</Filter>
     </ClCompile>
     <ClCompile Include="Currency.cpp">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildCPP</Filter>
     </ClCompile>
     <ClCompile Include="Horseback_Riding.cpp">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildCPP</Filter>
     </ClCompile>
     <ClCompile Include="IronWorking.cpp">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildCPP</Filter>
+    </ClCompile>
+    <ClCompile Include="MapMaking.cpp">
+      <Filter>TechnologiesV\ChildCPP</Filter>
+    </ClCompile>
+    <ClCompile Include="Masonry.cpp">
+      <Filter>TechnologiesV\ChildCPP</Filter>
+    </ClCompile>
+    <ClCompile Include="Mathematics.cpp">
+      <Filter>TechnologiesV\ChildCPP</Filter>
+    </ClCompile>
+    <ClCompile Include="Monarchy.cpp">
+      <Filter>TechnologiesV\ChildCPP</Filter>
+    </ClCompile>
+    <ClCompile Include="Mysticism.cpp">
+      <Filter>TechnologiesV\ChildCPP</Filter>
+    </ClCompile>
+    <ClCompile Include="Trade.cpp">
+      <Filter>TechnologiesV\ChildCPP</Filter>
+    </ClCompile>
+    <ClCompile Include="Writing.cpp">
+      <Filter>TechnologiesV\ChildCPP</Filter>
+    </ClCompile>
+    <ClCompile Include="CodeOfLaws.cpp">
+      <Filter>TechnologiesV\ChildCPP</Filter>
+    </ClCompile>
+    <ClCompile Include="Unit.cpp">
+      <Filter>Units\Parent Unit</Filter>
+    </ClCompile>
+    <ClCompile Include="Militia.cpp">
+      <Filter>Units\Childs</Filter>
+    </ClCompile>
+    <ClCompile Include="Technologies.cpp">
+      <Filter>TechnologiesV\Parent</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -163,49 +187,55 @@
       <Filter>Kastet</Filter>
     </ClInclude>
     <ClInclude Include="Alphabet.h">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildHeaders</Filter>
     </ClInclude>
     <ClInclude Include="BronzeWorking.h">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildHeaders</Filter>
     </ClInclude>
     <ClInclude Include="Ceremonial_Burial.h">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildHeaders</Filter>
     </ClInclude>
     <ClInclude Include="Currency.h">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildHeaders</Filter>
     </ClInclude>
     <ClInclude Include="Horseback_Riding.h">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildHeaders</Filter>
     </ClInclude>
     <ClInclude Include="IronWorking.h">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildHeaders</Filter>
     </ClInclude>
     <ClInclude Include="MapMaking.h">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildHeaders</Filter>
     </ClInclude>
     <ClInclude Include="Masonry.h">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildHeaders</Filter>
     </ClInclude>
     <ClInclude Include="Mathematics.h">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildHeaders</Filter>
     </ClInclude>
     <ClInclude Include="Monarchy.h">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildHeaders</Filter>
     </ClInclude>
     <ClInclude Include="Mysticism.h">
-      <Filter>TechnologiesV</Filter>
-    </ClInclude>
-    <ClInclude Include="Technologies.h">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildHeaders</Filter>
     </ClInclude>
     <ClInclude Include="Trade.h">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildHeaders</Filter>
     </ClInclude>
     <ClInclude Include="Writing.h">
-      <Filter>TechnologiesV</Filter>
+      <Filter>TechnologiesV\ChildHeaders</Filter>
     </ClInclude>
-    <ClInclude Include="СodeOfLaws.h">
-      <Filter>TechnologiesV</Filter>
+    <ClInclude Include="CodeOfLaws.h">
+      <Filter>TechnologiesV\ChildHeaders</Filter>
+    </ClInclude>
+    <ClInclude Include="Unit.h">
+      <Filter>Units\Parent Unit</Filter>
+    </ClInclude>
+    <ClInclude Include="Militia.h">
+      <Filter>Units\Childs</Filter>
+    </ClInclude>
+    <ClInclude Include="Technologies.h">
+      <Filter>TechnologiesV\Parent</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
