--- a/sfml template/sfml template.vcxproj.filters
+++ b/sfml template/sfml template.vcxproj.filters
@@ -142,6 +142,7 @@
     <ClCompile Include="Ocean.cpp">
       <Filter>Map kastet\Terrains\All</Filter>
     </ClCompile>
+    <ClCompile Include="Town.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resourses.h">
@@ -243,5 +244,6 @@
     <ClInclude Include="Ocean.h">
       <Filter>Map kastet\Terrains\All</Filter>
     </ClInclude>
+    <ClInclude Include="Town.h" />
   </ItemGroup>
 </Project>
